# enpm605_final

./: README.md
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/srv/: GetGoal.srv
doc/: README.md
final/: package.xml  setup.py
final/config/: aruco_parameters.yaml  goal_poses.yaml  goal_poses_for_service.yaml  nav2_params.yaml
final/final/: get_goal.py  navigation_node.py
final/launch/: navigation.launch.py
final/maps/: final_husarion_world.pgm  final_husarion_world.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/final/share/final/: package.dsv  package.ps1  package.sh  package.xml
log/: latest_build
ros2_aruco/: README.md
ros2_aruco/ros2_aruco/config/: aruco_parameters.yaml
ros2_aruco/ros2_aruco/ros2_aruco/: aruco_node.py
rosbot_ros_demo/husarion_gz_worlds/launch/: gz_sim.launch.py
rosbot_ros_demo/husarion_gz_worlds/worlds/: aruco_box_worlds.sdf  empty_with_plugins.sdf  husarion_world.sdf  multi_cube_worlds.sdf
rosbot_ros_demo/ros_components_description/urdf/: intel_realsense_d435.urdf.xacro  orbbec_astra.urdf.xacro
rosbot_ros_demo/rosbot_ros/: .gitignore  .pre-commit-config.yaml  README.md  ROS_API.md
rosbot_ros_demo/rosbot_ros/docker/: Dockerfile  compose.hardware.yaml  compose.simulation.yaml  justfile
rosbot_ros_demo/rosbot_ros/rosbot/: CHANGELOG.rst  install_dependencies.sh  package.xml  rosbot_hardware.repos  rosbot_simulation.repos
rosbot_ros_demo/rosbot_ros/rosbot_bringup/: CHANGELOG.rst  package.xml  setup.py
rosbot_ros_demo/rosbot_ros/rosbot_bringup/config/: laser_filter.yaml  rviz_config.rviz
rosbot_ros_demo/rosbot_ros/rosbot_bringup/launch/: bringup.launch.py  healthcheck.launch.py  microros.launch.py
rosbot_ros_demo/rosbot_ros/rosbot_controller/: CHANGELOG.rst  package.xml  setup.py
rosbot_ros_demo/rosbot_ros/rosbot_description/: CMakeLists.txt  package.xml
rosbot_ros_demo/rosbot_ros/rosbot_gazebo/: CHANGELOG.rst  package.xml  setup.py
rosbot_ros_demo/rosbot_ros/rosbot_utils/: CHANGELOG.rst  package.xml  setup.py
(+31 files in other folders)
